# memory-trace

./: .gitignore  CMakeLists.txt  Makefile  README.md  memtrail  memtrail.cpp  sample-c  sample-c.c  sample-cpp  sample-cpp.cpp
include/: memory-trace.h
samples/: sample.c  sample.cc
samples/c/: CMakeLists.txt  sample.c
samples/cc/: sample.cc
src/: memory-trace.c  memory-trace.cc
